# Privex

./: .env.example  .gitignore  .npmrc  LICENSE  README.md  TRADEMARK.md  announcement.json  package.json  pnpm-lock.yaml  turbo.json
relay/: Cargo.toml
relay/src/: main.rs
server/: Cargo.toml  build.rs
server/.sqlx/: query-09ca206294c46cdeddf24f7ba1b83da97f879f49ef224385b8de78ad39d2ff6e.json  query-09f16c447bdc761fed35c01ca59696ebe8f118c7926aed4e71e6b4831edd6f41.json  query-0a2ad47ba47bf3de2813d5085f816db097eaed47945499152a6301b72e047ced.json  query-0ad6c955eb072672aaf726b948c7e0226da2fa63782e3106597163153c97c58b.json  query-122c8cb8c60e8ee69d1c2cc37c3f74f872efcc391cdbc4badf4c62e9261c7908.json  query-12752ae3624e78d881f401706f6758b8bf9a16d802f36e3698aa805d2c9d970e.json  query-1981062bae26a51402fe485537cab78f975af575c90ef89da52bcb983d4e05d1.json  query-1bc29f8001b0d086935c519cac6336fbcec80e39fbbbb348d63c4ba53ea5527e.json  query-1be4011104fc32bc018703ca242b4c11645a9565bb12e82f3adee4dd2394d3c2.json  query-2b24d248b490dcd04f7724e31f0a9767e6e3c2da179aa80e75459b9889233b53.json  query-2c65d40540910ed3cd788928ceb90c8fe7c9344fcc1f0b0add71163e9cd243d4.json  query-2ebcb2325e1bb3bf67e4aaa9f8ab29728d5ba19f49061ad09f5c730041802d0e.json  query-3140a4f1dc7bd1b11d28a8e07d5a7e46675e9796e04fee1a381ec3559e1e8c78.json  query-316c2ddfb5332d5637a4e099f9b443c6b49f7433c847aec944440572ce8798d4.json  query-3279ff288f0c2fbfa5f50864ec2f2c5d085f461e7f7f80ce4caf77e5c939c1df.json  query-3d3bfb40d7b34022ab8890f48b207ab82e8ac2a43e6ba42ae8365e14fec16c16.json  query-3d870cec797f00802d42e8d5dc7c71f30bc07863c559b50bf8c4adfdb9876ab7.json  query-3ed6ede601169e0b1c1882e8138341ceac057137477130c41d2f32043b14cba2.json  query-481dba04f12600ce8f6f14c3c431b873d5d3302f76db2325ff06e7ae61303470.json  query-614c876ffa41720b95e707cde0ade897921c42f47d70504d887d41b1d9541827.json  query-6abcb8a5c8f715b77efd4ea6dbe354c2cd58a9789295f85e114d68f49cb3110b.json  query-6c5c4fcd20a7ec91ead24337f11bbd6d12155020231871766bd2687aa6677136.json  query-74720b5ac93b0c8b3eab4c193e0d1d2896167adc5e7ba3937b2aa1931b279c79.json  query-7807125aa1622750d14048ad1fb5979a448aa4f15f49205cede607d1a91957b8.json  query-7f862a3ba76ba49a83a79e9722be0084a96d115668c60156790007d69cb68e6b.json  query-8741c0d76f4b5b0ee0fb6f5a8206f4fd52654a0daaeb2d35d723e24a65b0044d.json  query-876c7e6bfc0bf035896c988958c17da885b7dd6935bc7bcd9bcbf64d60d5ed0b.json  query-897b56ca8127bc45e78c6e8a101edb08672d7e17cafe3cccb9edf34d90d7b078.json  query-8c2bb950159d0ee214eb11a82b621947b4e0c69140562f74bacb5ca91ee5ac24.json  query-8db0b181f608d23bc68c003ddfdfbf035a38c0eacf7a4a060f1d4a95a50a0302.json  query-8e8da8a5d6fd9d4e1b6ae257c2cdb64c71fba092a8a978d84f06e97ad44f9b3f.json  query-a17935f2855467ae6419b16e18c3f7ffbcb527176dc3e82f1025c096bd3e1e45.json  query-a2f7e40018a596405936d34827f0c167bc592f6e21d6284b12a7244384693fff.json  (+16 more)
server/migrations/: 0001_key_directory.sql  0003_kt_log.sql  (+11 more)
(+204 files in other folders)
