[package]
name = "privex-relay"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.93"

[profile.release]
debug = false
strip = "symbols"
